--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -1,8 +1,25 @@
+#gallery
+{
+  min-height: 100vh;
+}
+
 .carousel-inner {
-  border-radius: 17%;
+  border-radius: 24px;
   box-shadow: 0px 0px 10px -8px rgba(0, 0, 0, 0.6);
 }
 
 #gallery h3 {
   color: white;
+}
+
+@media only screen and (max-width: 768px) {
+  #gallery {
+    min-height: 72.5vh;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #gallery {
+    min-height: 40vh;
+  }
 }
