--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -6,6 +6,7 @@
   border: none;
   border-bottom: 1px solid white;
   color: var(--lightest-slate);
+  font-size: 26px;
 }
 #contact-form input::placeholder {
   color: var(--slate);
@@ -18,7 +19,7 @@
   color: var(--lightest-slate);
 }
 #contact-form input:focus::placeholder {
-  color: var(--lightest-slate);
+  color: transparent;
 }
 
 #contact-form textarea {
@@ -27,6 +28,7 @@
   border-right: 1px solid white;
   border-bottom: 1px solid white;
   color: var(--lightest-slate);
+  font-size: 26px;
 }
 
 #contact-form textarea::placeholder {
@@ -39,6 +41,7 @@
 }
 #contact-form textarea:focus {
   border-bottom: 3px solid var(--light-purple);
+  border-right: 3px solid var(--light-purple);
   box-shadow: 0 0 5px var(--light-purple);
 }
 
